@@ -100,8 +100,11 @@ Have the camera automatically follow a particular user.
 \fB\-\-highlight\-user USER\fR
 Highlight the names of a particular user.
 .TP
-\fB\-\-highlight\-all\-users\fR
+\fB\-\-highlight\-users\fR
 Highlight the names of all users.
+.TP
+\fB\-\-highlight\-dirs\fR
+Highlight the names of all directories.
 .TP
 \fB\-\-file\-filter REGEX\fR
 Filter out any files matching a specified regular expression.
