@@ -12,6 +12,7 @@
  * Added --dont-stop option for manual exiting when recording videos.
  * Added --stop-at-time option to stop Gource after a number of seconds.
  * Added --hide 'mouse' option.
+ * Added --highlight-dirs option.
  * Allow --file-idle-time 0 (files will never expire).
  * Allow --start-position 'random' to set a random start position.
  * --log-command VCS replaces multiple --log-command-VCS options.
